Move to Java 11
Signed-off-by: Jakub Scholz <www@scholzj.com>